--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//render/html/tpl/base.html=UTF-8
+encoding//render/html/tpl/site_map.html=UTF-8
 encoding/<project>=UTF-8
